# ron-rdt-rga-apply-patch-bug-reproduction

./: .gitignore  .gitmodules  README.md  cabal.project  devenv.nix  fix-rga-applyPatch.patch  ron-bug-example.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
test/: ApplyPatchTests.hs  ConsistencyTests.hs  DeviceConnectionTests.hs  DiffStateFramesCycleTests.hs  EdgeCaseTests.hs  Helpers.hs  Main.hs  RemovalTests.hs  SwarmResyncTests.hs
